tdf#61423 doc export: don't export page breaks from inside tables

I don't know how a RES_PAGEDESC made its way into the first paragraphs
of each table row. I presume it was a bug long ago in LO. But there
are at least two bug reports containing such a phenomenon.

Anyway, since Writer doesn't appear to allow entering a page-break
inside a table cell, it should be safe to ensure that we don't
export any that do exist somehow.

Change-Id: Ie5f84d73bc52d1f7da0468c1a91bcf2e250a7541